--- a/Room5.html
+++ b/Room5.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset = "utf-8">
-<title>마우스 좌표 테스트</title>
+<title>열쇠 찾기 랜덤 박스</title>
 <style>
 .secretBox{ width: 80px; height: 80px; left: 0px; top: 0px; border: 5px solid #000000; background: #FFD400; position: absolute; z-index: 100;
 	font-size : 55px; font-weight : bold; text-align : center;}
