리더보드 + 이어하기 완성
그 외 자잘한 디자인 수정

--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,7 @@
 	<link href="mainpage.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 	<script type="text/javascript">
-		function login() { //로그인까진 구현했으나 이후 변화는 미구현
+		function login() {
 			let user = document.getElementById("user");
 			let pw = document.getElementById("pw");
 
@@ -19,15 +19,16 @@
             	return 0;
             }
 
-			let val = sessionStorage.getItem(user.value);
+			let val = localStorage.getItem(user.value);
 			if (val == null || val !== pw.value) {
 				alert("이메일 또는 비밀번호가 일치하지 않습니다")
 				return 0;
 			}
 			else
 				alert("로그인 완료")
-			sessionStorage.setItem("id", user.value);
+			localStorage.setItem("id", user.value);
 			window.location.replace("mainpage_logined.html");
+
 		}
 		function openPopup() {
 			let popup = document.getElementById("popup");
@@ -67,18 +68,50 @@
             	alert("비밀번호를 확인해주세요")
             	return 0;
             }
-            else if(sessionStorage.getItem(user.value)!==null){
+            else if(localStorage.getItem(user.value)!==null){
             	alert("이미 존재하는 닉네임입니다")
             	return 0;
             }
 
-            sessionStorage.setItem(user.value, pw.value); //세션에 아이디 비번 저장
+            localStorage.setItem(user.value, pw.value);
             alert("회원가입 완료")
             popup.style.visibility = "hidden";
 			popup.style.opacity = "0";
 
         }
+        function loadSaveFile() {
+        // 현재 로그인된 닉네임 가져오기
+        let currentUsername = localStorage.getItem("id");
+
+        // 로그인되어 있지 않은 경우
+        if (!currentUsername) {
+            alert("로그인을 먼저 해주세요.");
+            return;
+        }
+
+        // 현재 로그인된 사용자의 세이브 파일 확인
+        let saveFileKey = currentUsername + "End";
+        let currentStage = localStorage.getItem(saveFileKey);
+
+        // 세이브 파일이 없는 경우
+        if (!currentStage) {
+            alert("저장된 세이브 파일이 없습니다.");
+            return;
+        }
+
+        // 확인 창 띄우기
+        let confirmMessage = `현재 ${currentStage} 스테이지까지 진행된 기록이 있습니다. 이 스테이지부터 다시 시작하시겠습니까?`;
+        let userResponse = confirm(confirmMessage);
+
+        // 사용자가 확인을 누른 경우
+        if (userResponse) {
+            // 예를 누른 경우 해당 스테이지로 이동
+            let nextPage = `${currentStage}.html`;
+            window.location.replace(nextPage);
+        	}
+        }
 	</script>
+	<script type="text/javascript" src="leaderboard.js"></script>
 </head>
 <body>
 	<div id="background">
@@ -89,8 +122,8 @@
 			<div>
 				<div id="mainui-guide">
 					<div id="guide">
-						저희 게임은 수업 시간에 배운 내용을 활용하여 웹페이지를 탈출하는 게임입니다.<br>
-						게임은 30개의 스테이지로 이루어져 있으며 모두 클리어해보시길 바랍니다.
+						저희 게임은 수업 시간에 배운 <br> 내용을 활용하여 웹페이지를 <br> 탈출하는 게임입니다.<br>
+						게임은 30개의 스테이지로 <br> 이루어져 있으며 모두 <br> 클리어해보시길 바랍니다.
 					</div>					
 				</div>
 			</div>
@@ -126,10 +159,14 @@
 			</div>
 			<div>
 				<div id="mainui-savefile">
-					세이브파일 불러오기
+					<button onclick="loadSaveFile()">이전 최고기록 <br> 불러오기</button>
 				</div>
 				<div id="mainui-leaderboard">
-					리더보드
+					<div id="leaderboard-container">
+						<script>
+        					showLeaderboard(); // 리더보드를 표시하는 함수 호출
+    					</script>
+					</div>
 				</div>
 			</div>
 		</div>
