--- a/Room7.html
+++ b/Room7.html
@@ -20,9 +20,10 @@
 </script>
 </head>
 <body onmousemove = "MoveMouse(event)">
-	<div style = "color : #FFFFFF; font-weight : bold; font-size : 35px;">
+	<div style = "color : #FFFFFF; font-weight : bold; font-size : 35px; position: absolute; left: 10px; top: 10px; text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black; ">
 		어둠 속에 숨어있는 열쇠를 찾아라.
 	</div>
+	
 	<div id = "background" >
 		B
 	</div>
