--- a/mainpage.html
+++ b/mainpage.html
@@ -178,7 +178,7 @@
 					<input id= "user-reg" type="text" placeholder="닉네임" onKeyPress="if( event.keyCode==13 ){register();}">
 					<input id= "pw-reg" type="password" placeholder="비밀번호" onKeyPress="if( event.keyCode==13 ){register();}">
 					<input id= "repw-reg" type="password" placeholder="비밀번호 확인" onKeyPress="if( event.keyCode==13 ){register();}">
-					<input type="button" value="가입" onclick="register()">
+					<input type="button" value="회원가입하기" onclick="register()">
 				</form>
 			</div>
 		</div>
