--- a/10.html
+++ b/10.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript" src="leaderboard.js"></script>
   <style>
 
     .reroll img {
@@ -11,6 +12,7 @@
       display: block;
     }
   </style>
+
 </head>
 <body>
   <div id="scrollDiv" style="overflow:auto">
