--- a/11.html
+++ b/11.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>11</title>
+  <script type="text/javascript" src="leaderboard.js"></script>
   <style>
     .wrapper {
       display: flex;
