--- a/29.html
+++ b/29.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>29</title>
+    <script type="text/javascript" src="leaderboard.js"></script>
     <style>
         #escape29 {
             display: none;
@@ -23,7 +24,7 @@
 </head>
 <body>
 
-<div class="redtext">10% 확률로 방 탈출 키가 생성됩니다.</div>
+<div class="redtext">0% 확률로 방 탈출 키가 생성됩니다.</div>
 
 <div id="escape29">
   <a href="11.html">
