--- a/1.html
+++ b/1.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="leaderboard.js"></script>
     <title>1</title>
     <style>
         .button1 {
