--- a/18_horror.html
+++ b/18_horror.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="leaderboard.js"></script>
     <title>힝 무섭징?</title>
 </head>
 <body>
