--- a/2.html
+++ b/2.html
@@ -1,74 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>마우스를 버튼에 올려 놓았을때 힌트 출력</title>
-    <style>
-        #container {
-            display: flex;
-            align-items: center;
-        }
+	<script type="text/javascript" src="leaderboard.js"></script>
+<meta charset = "utf-8">
+<title>너무 어두워</title>
+<style>
+#background { width : 2000px; height : 1000px; left : 0px; top : 0px;background : #000000;position : absolute; z-index : -100 }
+#WhiteCircle { width: 120px; height: 120px; left: 10px; top: 10px; border: 5px solid #FFFFFF; background: #FFFFFF; position: absolute; z-index: -99; border-radius: 50%;
+	font-size : 55px; font-weight : bold; text-align : center;}
+</style>
 
-        #object2 {
-            width: 150px;
-            height: 15px;
-            background-color: yellow;
-            display: none;
-        }
-    </style>
-    <script type="text/javascript" src="leaderboard.js">
-        window.onload = function() {
-            const hint = document.getElementById("hint");
-            const object2 = document.getElementById("object2");
-            const answerInput = document.getElementById("answerInput");
-            const checkButton = document.getElementById("checkButton");
-            const resultMessage = document.getElementById("resultMessage");
-
-            hint.addEventListener("mouseover", function() {
-                object2.style.display = "block";
-            });
-
-            hint.addEventListener("mouseout", function() {
-                object2.style.display = "none";
-            });
-
-            checkButton.addEventListener("click", function() {
-                const answer = 89;
-                const userAnswer = parseInt(answerInput.value);
-
-                if (userAnswer === answer) {
-                    resultMessage.textContent = "정답입니다!";
-                    resultMessage.style.color = "green";
-                    setTimeout(function() {
-                        window.location.href = "13.html";
-                    }, 2000);
-                }
-                else {
-                    resultMessage.textContent = "오답입니다!";
-                    resultMessage.style.color = "red";
-                }
-            });
-        }
-    </script>
+<script>
+	
+	function MoveMouse(e)
+	{
+		let WhiteCircle = document.getElementById("WhiteCircle");
+		WhiteCircle.style.left = e.pageX - 70+ "px";
+		WhiteCircle.style.top = e.pageY - 70+ "px";
+	}
+</script>
 </head>
-<body>
-    <h3>주어진 문장들로 부터 정답을 유추하세요</h3>
-    <hr>
-    <p>
-        3+2=7<br>
-        5+4=23<br>
-        7+6=47<br>
-        9+8=79<br>
-        10+9=?<br>
-
-        ?에 들어갈 알맞은 숫자는 얼마인가?
-    </p>
-
-    <div id="container">
-        <img id="hint" width="50" height="50" src="hint.png" alt="Object 1">
-        <div id="object2">A+B = A*B + B - 1</div>
-    </div>
-    <input type="text" id="answerInput" placeholder="정답">
-    <button id="checkButton">확인</button>
-    <div id="resultMessage"></div>
+<body onmousemove = "MoveMouse(event)">
+	<div style = "color : #FFFFFF; font-weight : bold; font-size : 35px; position: absolute; left: 10px; top: 10px; text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black; ">
+		어둠 속에 숨어있는 열쇠를 찾아라.
+	</div>
+	
+	<div id = "background" >
+		B
+	</div>
+	<div id = "WhiteCircle">
+	</div>
+	<a href = "3.html">
+      <img src="key.png" alt="Overlay Image" style="position: absolute; top: 30px; left: 1780px; width: 70px; height: 70px; filter: brightness(0);">
+  	</a>
 </body>
 </html>
