--- a/6.html
+++ b/6.html
@@ -2,6 +2,7 @@
 <html lang="kr">
 <head>
     <meta charset="UTF-8">
+    <script type="text/javascript" src="leaderboard.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image rotation and movement practice</title>
     <style>
@@ -99,7 +100,7 @@
                 alert("정답입니다. 2초뒤 다음 스테이지로 넘어갑니다.");
                 setTimeout(function () {
                     document.getElementById("answerForm").submit();
-                    window.location.href = "mainpage.html";
+                    window.location.href = "7.html";
                 }, 2000);
             } else {
                 alert("오답입니다.");
