--- a/11.html
+++ b/11.html
@@ -1,55 +1,140 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
+
 <head>
-  <meta charset="utf-8">
-  <title>11</title>
-  <script type="text/javascript" src="leaderboard.js"></script>
-  <style>
-    .wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: black;
-      height: 100vh;
-      margin: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="leaderboard.js"></script>
+    <title>1</title>
+    <style>
+        .button1 {
+            background: #000;
+            color: white;
+        }
 
-    .white-background {
-      background-color: white !important; 
-    }
-  </style>
+        .button2 {
+            background: #ff9600;
+            color: #000;
+        }
+
+        .button3 {
+            background: #f90a0a;
+            color: #000;
+        }
+
+        .button4 {
+            background: #f8ff00;
+            color: #000;
+        }
+
+        .button5 {
+            background: #03fbf2;
+            color: #000;
+        }
+
+        .button6 {
+            background: #fc00ff;
+            color: #000;
+        }
+
+        .button7 {
+            background: ##0500ff;
+            color: #000;
+        }
+    </style>
 </head>
+
 <body>
+<img class="hint-image" src="18_help.png" alt="힌트 이미지" style="width: 500px; height: 500px;">
 
-<div class="wrapper" id="wrapper">
-  <a href="#" onclick="change(); return false;">
-    <img src="nolight.png" id="test">
-  </a>
-</div>
+    <div>
+        <p></p>
+    </div>
+    <div>
+        <button class="button1" onclick="newTabClick()">어</button>
+        <button class="button1" onclick="newTabClick()">느</button>
+        <button class="button1" onclick="newTabClick()">버</button>
+        <button class="button1" onclick="newTabClick()">튼</button>
+        <button class="button1" onclick="newTabClick()">이</button>
+        <button class="button1" onclick="newTabClick()">맞</button>
+        <button class="button1" onclick="newTabClick()">을</button>
+        <button class="button1" onclick="newTabClick()">까</button>
+        <button class="button1" onclick="newTabClick()">요</button>
+        <button class="button1" onclick="newTabClick()">오</button>
+        <button class="button1" onclick="newTabClick()">?</button>
+        <p></p>
+        <button class="button2" onclick="newTabClick()">어</button>
+        <button class="button2" onclick="newTabClick()">느</button>
+        <button class="button2" onclick="newTabClick()">버</button>
+        <button class="button2" onclick="newTabClick()">튼</button>
+        <button class="button2" onclick="newTabClick()">이</button>
+        <button class="button2" onclick="newTabClick()">맞</button>
+        <button class="button2" onclick="newTabClick()">을</button>
+        <button class="button2" onclick="newTabClick()">까</button>
+        <button class="button2" onclick="newTabClick()">요</button>
+        <button class="button2" onclick="newTabClick()">오</button>
+        <button class="button2" onclick="newTabClick()">?</button>
+        <p></p>
+        <button class="button3" onclick="newTabClick()">어</button>
+        <button class="button3" onclick="newTabClick()">느</button>
+        <button class="button3" onclick="newTabClick()">버</button>
+        <button class="button3" onclick="newTabClick()">튼</button>
+        <button class="button3" onclick="newTabClick()">이</button>
+        <button class="button3" onclick="newTabClick()">맞</button>
+        <button class="button3" onclick="newTabClick()">을</button>
+        <button class="button3" onclick="newTabClick()">까</button>
+        <button class="button3" onclick="newTabClick()">요</button>
+        <button class="button3" onclick="newTabClick()">오</button>
+        <button class="button3" onclick="newTabClick()">?</button>
+        <p></p>
+        <button class="button4" onclick="newTabClick()">어</button>
+        <button class="button4" onclick="newTabClick()">느</button>
+        <button class="button4" onclick="newTabClick()">버</button>
+        <button class="button4" onclick="newTabClick()">튼</button>
+        <button class="button4" onclick="newTabClick()">이</button>
+        <button class="button4" onclick="realClick()">맞</button>
+        <button class="button4" onclick="newTabClick()">을</button>
+        <button class="button4" onclick="newTabClick()">까</button>
+        <button class="button4" onclick="newTabClick()">요</button>
+        <button class="button4" onclick="newTabClick()">오</button>
+        <button class="button4" onclick="newTabClick()">?</button>
+        <p></p>
+        <button class="button5" onclick="newTabClick()">어</button>
+        <button class="button5" onclick="newTabClick()">느</button>
+        <button class="button5" onclick="newTabClick()">버</button>
+        <button class="button5" onclick="newTabClick()">튼</button>
+        <button class="button5" onclick="newTabClick()">이</button>
+        <button class="button5" onclick="newTabClick()">맞</button>
+        <button class="button5" onclick="newTabClick()">을</button>
+        <button class="button5" onclick="newTabClick()">까</button>
+        <button class="button5" onclick="newTabClick()">요</button>
+        <button class="button5" onclick="newTabClick()">오</button>
+        <button class="button5" onclick="newTabClick()">?</button>
+        <p></p>
+        <button class="button6" onclick="newTabClick()">어</button>
+        <button class="button6" onclick="newTabClick()">느</button>
+        <button class="button6" onclick="newTabClick()">버</button>
+        <button class="button6" onclick="newTabClick()">튼</button>
+        <button class="button6" onclick="newTabClick()">이</button>
+        <button class="button6" onclick="newTabClick()">맞</button>
+        <button class="button6" onclick="newTabClick()">을</button>
+        <button class="button6" onclick="newTabClick()">까</button>
+        <button class="button6" onclick="newTabClick()">요</button>
+        <button class="button6" onclick="newTabClick()">오</button>
+        <button class="button6" onclick="newTabClick()">?</button>
+        <p></p>
 
-<script>
-  var c = true;
+    </div>
+    <script>
+        let myWindow;
+        function newTabClick() {
+            window.location.href = '18_horror.html';
+        }
 
-  function change() {
-    if (c) {
-      document.getElementById('wrapper').classList.add('white-background'); // 흰색 배경 클래스 추가
-      document.getElementById('test').src = 'light.png';
-      c = false;
-
-      setTimeout(function () {
-        document.getElementById('wrapper').classList.remove('white-background'); // 흰색 배경 클래스 제거
-        document.getElementById('wrapper').style.backgroundColor = 'black'; // 배경색을 검정색으로 변경
-        document.getElementById('test').src = 'man.jpg';
-document.getElementById('test').insertAdjacentHTML('afterend', '<img src="key.png" id="key" onclick="moveToMainPage();" style="width: 150px; height: 150px;">');
-
-      }, 3000);
-    }
-  }
-
-  function moveToMainPage() {
-    window.location.href = 'mainpage.html';
-  }
-</script>
-
+        function realClick() {
+            window.location.href = '12.html';
+        }
+    </script>
 </body>
+
 </html>
