--- a/3.html
+++ b/3.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript" src="leaderboard.js"></script>
 <meta charset = "utf-8">
+
 <title>모든 전구를 켜라!</title>
 <style>
 .light { width : 100px; height : 125px; position : absolute; left : 0px; top : 0px;}
@@ -38,7 +40,7 @@
 </script>
 </head>
 <body>
-	<a href = "mainpage.html">
+	<a href = "4.html">
       <img id = "key" src="key.png" alt="Overlay Image">
   	</a>
 	<div>
