--- a/8.html
+++ b/8.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <script type="text/javascript" src="leaderboard.js"></script>
   <meta charset="utf-8">
   <title>18</title>
   <style>
@@ -88,7 +89,7 @@
     function checkAndRedirect() {
       const inputText = document.getElementById('inputText').value.toLowerCase();
       if (inputText === 'you go home') {
-        window.location.href = '11.html';
+        window.location.href = '9.html';
       }
     }
   </script>
