--- a/4.html
+++ b/4.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="kr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +43,7 @@
       object.target = '_blank';
       object.style.left = randomPosition.x + 'px';
       object.style.top = randomPosition.y + 'px';
-      object.style.backgroundImage = "url('light.png')";
+      object.style.backgroundImage = "url('key.png')";
       document.body.appendChild(object);
       currentObject = object;
     }
