--- a/9.html
+++ b/9.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="kr">
 <head>
     <meta charset="UTF-8">
-    <title>29</title>
+    <title>확률성 탈출</title>
     <script type="text/javascript" src="leaderboard.js"></script>
     <style>
         #escape29 {
@@ -19,6 +18,9 @@
 
         #horrorImage {
             display: none;
+            display: none;
+            max-width: 100%;
+            max-height: 100vh;
         }
     </style>
 </head>
@@ -33,7 +35,7 @@
 </div>
 
 <div id="horrorImage">
-    <img src="horror.png" alt="Horror Image">
+    <img src="man.jpg" alt="Horror Image">
 </div>
 
 <script>
