--- a/7.html
+++ b/7.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="ko">
 <head>
   
   <meta charset="UTF-8">
@@ -20,11 +19,11 @@
 <h3>숨어있는 정답을 찾으세요</h3>
 <hr>
 hint : 이미지와 다양한 상호작용 필요
-<img id="imageButton" src="nolight.png" alt="클릭 가능한 이미지" onclick="정답_확인(event)" oncontextmenu="힌트_표시(event); return false;">
+<img id="imageButton" src="key.png" alt="클릭 가능한 이미지" onclick="check_answer(event)" oncontextmenu="hint(event); return false;">
 
 <script>
   // 왼쪽 클릭 시 정답 확인하는 함수
-  function 정답_확인(event) {
+  function check_answer(event) {
     // 이미지 요소 가져오기
     var imageButton = document.getElementById("imageButton");
     var correctAnswer = "16";
@@ -44,7 +43,7 @@ hint : 이미지와 다양한 상호작용 필요
   }
 
   // 오른쪽 클릭 시 노래 재생 및 힌트 주는 함수
-  function 힌트_표시(event) {
+  function hint(event) {
     alert("제목을 확인하세요");
   }
 </script>
