--- a/8.html
+++ b/8.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
 <head>
   <script type="text/javascript" src="leaderboard.js"></script>
   <meta charset="utf-8">
-  <title>18</title>
+  <title>숨겨진 단어를 찾아 탈출하세요</title>
   <style>
     body {
       background-color: red;
