--- a/4.html
+++ b/4.html
@@ -13,9 +13,9 @@
   </style>
 </head>
 <body>
-<h3>오브젝트를 클릭하여 탈출하기</h3>
+<h3>열쇠를 클릭하여 탈출하기</h3>
 <hr>
-노란색 전구를 클릭하여 다음스테이지로 넘어가세요.
+열쇠를 클릭하여 다음스테이지로 넘어가세요.
 
 <script>
   var currentObject = null;
