리더보드 오류 수정

--- a/12.html
+++ b/12.html
@@ -41,7 +41,7 @@
                     resultMessage.textContent = "정답입니다!";
                     resultMessage.style.color = "green";
                     setTimeout(function() {
-                        window.location.href = "mainpage.html";
+                        window.location.href = "mainpage_logined.html";
                     }, 2000);
                 } else {
                     resultMessage.textContent = "오답입니다!";
